# nix-and-bazel-stack

./: .bazelrc  BUILD.bazel  WORKSPACE  default.nix  flake.nix  runme.nixsh
bazel/: 0001-chore-lowercase-OSFamily-property-value.patch  0001-feat-posix-compliant-gcc-wrapper.patch
nix/: default.nix  devShell.nix  sources.json
