load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "hello-world",
    srcs = ["hello-world.cc"],
)

platform(
    name = "x86_64-linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

alias(
    name = "host",
    actual = ":x86_64-linux",
)

platform(
    name = "host-nix",
    constraint_values = [
        "@io_tweag_rules_nixpkgs//nixpkgs/constraints:support_nix",
    ],
    parents = [
        ":host",
    ],
)

alias(
    name = "remote",
    actual = "@starterkit//:ash-x86_64-cc",
)

platform(
    name = "remote-nix",
    constraint_values = [
        "@io_tweag_rules_nixpkgs//nixpkgs/constraints:support_nix",
    ],
    parents = [
        ":remote",
    ],
)

genrule(
    name = "hello-world-static",
    srcs = [
        "hello-world.c",
        "@static_musl_dev//:include",
        "@static_gcc//:include",
    ],
    outs = ["hello-world-stat"],
    cmd = """
export LIBRARY_PATH=external/static_musl/lib
export PATH=/proc/self/cwd/external/static_gcc/bin:/proc/self/cwd/external/static_binutils/bin

$(location @static_gcc//:bin/gcc) \
  -L external/static_musl/lib \
  -idirafter external/static_musl_dev/include \
  -static \
  $(location :hello-world.c) -o "$@"
""",
    tools = [
        "@static_binutils//:bin",
        "@static_gcc//:bin",
        "@static_gcc//:bin/gcc",
        "@static_gcc//:lib",
        "@static_gcc//:lib64",
        "@static_gcc//:libexec",
        "@static_musl//:lib",
    ],
)
